--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -674,6 +674,7 @@
         "settle_globally_settled": "Settle instantly",
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_orders": "Settle orders",
+        "settle_offset": "Settlement price offset: %(offset)s%",
         "settlement_hint": "You are attempting to settle {long}. Current price of {market_link}",
         "short": "Short",
         "show_all_orders": "Show all %(rowcount)s orders",
