fix white screen on exchange page:locale:ru

--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1900,7 +1900,7 @@
         "filter_ops": "Используйте этот список для фильтрации Вашей истории по типу операции.",
         "follow_user": "Вы подписаны на этого пользователя",
         "follow_user_add": "Нажмите, чтобы подписаться на этого пользователя",
-        "gateway": "Шлюзы подкрепляют депозиты реальными активами на 100% ",
+        "gateway": "Шлюзы подкрепляют депозиты реальными активами",
         "generate": "Сгенерированный пароль был создан локально в Вашем браузере. <br /><br /><strong>Никто, кроме Вас не имеет к нему доступа</strong>.<br /><br /> Вставьте его ниже и сохраните копию в надежном месте",
         "global_settle": "Этот актив попал под глобальный расчёт. Вы можете провести мгновенную конвертацию своих средств из %(asset)s в %(backingAsset)s по цене глобального расчёта (смотрите информацию на бирже или в подробностях об активе).",
         "global_settle_price": "Это цена, по которой будут выполняться расчеты ордеров. Этот актив находится в процессе глобального расчёта, поэтому ордера будут выполняться мгновенно",
