fix xbts locales: xbts -> xbtsx

--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -967,7 +967,7 @@
             "rudex": "%(asset)sアセットは実際の%(backed)sと1：1に対応し、Rudexによって提供されるゲートウェイサービスによって入出金が可能です。",
             "trade": "%(asset)sアセットは実際の%(backed)sと1：1に対応し、Blocktradesによって提供されるゲートウェイサービスによって入出金が可能です。",
             "win": "",
-            "xbts": "%(asset)sアセットは実際の%(backed)sと1：1に対応し、XBTSによって提供されるゲートウェイサービスによって入出金が可能です。"
+            "xbtsx": "%(asset)sアセットは実際の%(backed)sと1：1に対応し、XBTSによって提供されるゲートウェイサービスによって入出金が可能です。"
         },
         "balance": "現在の残高",
         "balance_asset": "現在の%(asset)s残高",
