- Add cumulative debt column to Collatoral Bids table - Add required translations for new column - Add debt summation logic

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1990,6 +1990,7 @@
         "bond_create_offer": "Created bond offer",
         "bond_pay_collateral": "Paid collateral of",
         "borrow_amount": "Debt",
+        "cumulative_borrow_amount": "Cumulative Debt",
         "borrower": "Borrower",
         "broadcast_fail": "Failed to broadcast the transaction: %(message)s",
         "broadcast_success": "Transaction has been broadcast",
