SETTLEMENT PRICE" in the price feed data should be Feed price [issue 2603 ]

--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -769,7 +769,7 @@
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Veröffentlicht",
                 "publisher": "Herausgeber",
-                "settlement_price": "Verrechnungs-Preis",
+                "settlement_price": "Feed-Preis",
                 "title": "Preisquellen Daten"
             },
             "settlement": {
