--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -763,7 +763,7 @@
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Duyurdu",
                 "publisher": "Duyuran",
-                "settlement_price": "Uzlaşma",
+                "settlement_price": "Fiyat Yayını",
                 "title": "Fiyat Yayın Verileri"
             },
             "settlement": {
