--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -762,6 +762,7 @@
                 "maximum_short_squeeze_ratio": "Maximum short squeeze ratio (MSSR)",
                 "min_feeds": "Minimum feeds",
                 "settlement_price": "Force Settlement price",
+                "feed_price": "Feed price",
                 "title": "Price Feed"
             },
             "price_feed_data": {
@@ -770,7 +771,8 @@
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Published",
                 "publisher": "Publisher",
-                "settlement_price": "Settlement price",
+                "settlement_price": "Force Settlement Price",
+                "feed_price": "Feed price",
                 "title": "Price Feed Data"
             },
             "settlement": {
@@ -792,7 +794,7 @@
                 "settle_remaining_volume": "Remaining settleable volume",
                 "settlement_funds": "Settlement Funds",
                 "settlement_funds_collateral_ratio": "Settlement Fund Collateral Ratio",
-                "settlement_price": "Settlement Price",
+                "settlement_price": "Force Settlement Price",
                 "title": "Settlement"
             },
             "summary": {
@@ -849,7 +851,8 @@
             "op_type": "Operation type",
             "previous": "Previous",
             "previous_secret": "Previous secret",
-            "settlement_price": "Settlement price",
+            "settlement_price": "Force Settlement Price",
+            "feed_price": "Feed Price",
             "short_limit": "Short limit",
             "time": "Time",
             "title": "Block",
