--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -754,7 +754,7 @@
                 "maximum_short_squeeze_price": "Maximum short squeeze price (MSSP)",
                 "maximum_short_squeeze_ratio": "Massimo short sqeeze ratio (MSSR)",
                 "min_feeds": "Minimum feeds",
-                "settlement_price": "Prezzo di settlement",
+                "settlement_price": "",
                 "title": "Price Feed"
             },
             "price_feed_data": {
@@ -763,7 +763,7 @@
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Pubblicato",
                 "publisher": "Publisher",
-                "settlement_price": "Prezzo di settlement",
+                "settlement_price": "",
                 "title": "Dati del Price Feed"
             },
             "settlement": {
@@ -785,7 +785,7 @@
                 "settle_remaining_volume": "Remaining settleable volume",
                 "settlement_funds": "Settlement Funds",
                 "settlement_funds_collateral_ratio": "Settlement Fund Collateral Ratio",
-                "settlement_price": "Settlement Price",
+                "settlement_price": "",
                 "title": "Settlement"
             },
             "summary": {
@@ -842,7 +842,7 @@
             "op_type": "Tipo di operazione",
             "previous": "Precedente",
             "previous_secret": "Segreto precedente",
-            "settlement_price": "Prezzo di settlement",
+            "settlement_price": "",
             "short_limit": "Limite di Short",
             "time": "Ora",
             "title": "Blocco",
