--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -754,7 +754,7 @@
                 "maximum_short_squeeze_price": "Maximum short squeeze price (MSSP)",
                 "maximum_short_squeeze_ratio": "强制平仓比例上限",
                 "min_feeds": "Minimum feeds",
-                "settlement_price": "清算价",
+                "settlement_price": "强清价",
                 "title": "喂价"
             },
             "price_feed_data": {
@@ -763,7 +763,7 @@
                 "maximum_short_squeeze_ratio": "强制平仓比例上限",
                 "published": "发布时间",
                 "publisher": "发布人",
-                "settlement_price": "清算价",
+                "settlement_price": "强清价",
                 "title": "喂价数据"
             },
             "settlement": {
@@ -785,7 +785,7 @@
                 "settle_remaining_volume": "Remaining settleable volume",
                 "settlement_funds": "Settlement Funds",
                 "settlement_funds_collateral_ratio": "Settlement Fund Collateral Ratio",
-                "settlement_price": "Settlement Price",
+                "settlement_price": "强清价",
                 "title": "Settlement"
             },
             "summary": {
@@ -842,7 +842,7 @@
             "op_type": "操作类型",
             "previous": "上一个区块",
             "previous_secret": "上一个密文",
-            "settlement_price": "清算价",
+            "settlement_price": "强清价",
             "short_limit": "Short limit",
             "time": "区块生成时间",
             "title": "区块",
