--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -647,6 +647,9 @@
                 "hide_function_buttons": "Скрыть все кнопки, которыми можно управлять из персонализированной формы",
                 "increase_chart_height": " Увеличить высоту графика",
                 "market_location": "На какую сторону прикрепить вертикальный биржевой стакан. Это поменяет его местами с панелью рынка",
+                "market_trades": "",
+                "my_trades": "",
+                "open_orders": "",
                 "order_book_grouping": "Сгруппировать ордера, которые близки по заданному проценту",
                 "order_style": "Использовать вертикальный биржевой стакан для прикрепления к боковой панели",
                 "orderbook_auto_scroll": "Автоматически прокручивать биржевой стакан, чтобы держаться центра при поступлении новых ордеров. Отключите, чтобы разрешить прокрутку",
@@ -657,6 +660,7 @@
                 "reduce_scrollbars": "Отключить полосы прокрутки по умолчанию",
                 "reload": "Изменение этой опции вступит в силу только после ручной перезагрузки",
                 "reverse_order_book": "Отобразить биржевой стакан в обратном порядке, чтобы ордера на покупку отображались сверху",
+                "settlements": "",
                 "show_market_depth": "Показать глубину рынка",
                 "show_price_chart": " Показать график цен",
                 "single_colum_order_form": "Закрепить цену, количество, общую сумму и т.п. в одной колонке (неподвижно)"
@@ -669,6 +673,7 @@
         "settle_delay_globally_settled": "Расчёт для данного актива будет произведён немедленно",
         "settle_globally_settled": "Провести мгновенный расчёт",
         "settle_globally_settled_tooltip": "Этот актив попал под глобальный расчёт. Вы можете провести мгновенный расчёт по цене глобального расчёта (смотрите информацию на бирже или в подробностях об активе)",
+        "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "Ордера на погашение",
         "settlement_hint": "Вы пытаетесь провести расчёт {long}. Текущая цена на {market_link}",
         "short": "Сократить",
@@ -751,6 +756,7 @@
             "price_feed": {
                 "external_feed_price": "Цена в котировках (медиана котировок заверителей)",
                 "feed_lifetime": "Срок действия котировок (в часах)",
+                "feed_price": "Feed price",
                 "global_settlement_price": "Глобальный расчёт запускается при цене",
                 "maintenance_collateral_ratio": "Коэффициент обеспечения поддержки (MCR)",
                 "maximum_short_squeeze_price": "Максимальная цена короткого сжатия (MSSP)",
@@ -761,6 +767,7 @@
             },
             "price_feed_data": {
                 "core_exchange_rate": "CER (основной обменный курс)",
+                "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "MCR (коэффициент обеспечения поддержки)",
                 "maximum_short_squeeze_ratio": "MSSR (максимальный коэффициент краткого сжатия)",
                 "published": "Опубликовано",
@@ -967,7 +974,9 @@
             "gdex": " Актив %(asset)s обеспечен в соотношении 1:1 реальными %(backed)s и может быть размещен в депозите или выведен через шлюз, предоставляемый GDex.",
             "open": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от OpenLedger.",
             "rudex": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Rudex.",
-            "trade": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Blocktrades."
+            "trade": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Blocktrades.",
+            "win": "",
+            "xbts": ""
         },
         "balance": "Текущий остаток на счете",
         "balance_asset": "Текущий баланс %(asset)s",
@@ -1376,7 +1385,8 @@
             "amount": "Сумма к сожжению",
             "from": "Сжечь с аккаунта",
             "submit": "Сжечь",
-            "title": "Сжечь (зарезервировать) актив"
+            "title": "Сжечь (зарезервировать) актив",
+            "warning_message": "Note that asset burn (reserve) will destroy the amount of selected asset. This action can not be reverted once submitted!"
         },
         "save": "сохранить",
         "send": {
@@ -1628,6 +1638,7 @@
     },
     "settings": {
         "access": "Доступ",
+        "access_text": "",
         "accounts": "Аккаунты",
         "accounts_text": "Список Ваших аккаунтов.",
         "activate": "Активировать",
@@ -1802,7 +1813,8 @@
             },
             "steps_costs": {
                 "text": " Некоторый более длинный текст. Некоторый более длинный текст. Некоторый более длинный текст. Некоторый более длинный текст. Некоторый более длинный текст. Некоторый более длинный текст.",
-                "title": " Поселок"
+                "title": " Поселок",
+                "title_within": ""
             },
             "steps_introduction": {
                 "text": "Используйте это собственное приложение из блокчейна BitShares для управления обеспечением депозита и генерацией SmartCoins",
@@ -2194,6 +2206,7 @@
             "rangeNamed": "%(name)s должен быть в диапазоне от %(min)s до %(max)s",
             "required": "Поле обязательно для заполнения",
             "requiredNamed": "%(name)s обязательно",
+            "test": "",
             "types": {
                 "array": "Поле должно содержать массив",
                 "arrayNamed": "%(name)s должен быть массивом",
