--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -673,6 +673,7 @@
         "settle_delay_globally_settled": "This asset will settle instantly",
         "settle_globally_settled": "Resolver al instante",
         "settle_globally_settled_tooltip": "Este activo se liquida globalmente. Puede liquidarlo instantáneamente para el precio de liquidación global (vea el encabezado de intercambio o los detalles del activo)",
+        "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "Establecer órdenes",
         "settlement_hint": "Usted está tratando de resolver {long}. Aquí hay un desglose de precios de {market_link}:",
         "short": "Corto",
@@ -755,6 +756,7 @@
             "price_feed": {
                 "external_feed_price": "Precio de Feed (Mediana de feeds de testigos)",
                 "feed_lifetime": "Vida de Feed (horas)",
+                "feed_price": "Feed price",
                 "global_settlement_price": "Liquidación global sucede a precio",
                 "maintenance_collateral_ratio": "Relación colateral de mantenimiento (MCR)",
                 "maximum_short_squeeze_price": "Precio máximo de compresión corta (MSSP)",
@@ -765,6 +767,7 @@
             },
             "price_feed_data": {
                 "core_exchange_rate": "CER",
+                "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "MCR",
                 "maximum_short_squeeze_ratio": "MSSR",
                 "published": "Publicado",
@@ -1382,7 +1385,8 @@
             "amount": "Cantidad de quemar",
             "from": "Cuenta desde la cual quemar",
             "submit": "Quemar",
-            "title": "Quemar (reservar) activos"
+            "title": "Quemar (reservar) activos",
+            "warning_message": "Note that asset burn (reserve) will destroy the amount of selected asset. This action can not be reverted once submitted!"
         },
         "save": "ahorrar",
         "send": {
