--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -647,6 +647,9 @@
                 "hide_function_buttons": "隐藏所有按钮，可以在定制中进行管理。",
                 "increase_chart_height": "增加图标高度",
                 "market_location": "要将垂直订单薄固定在哪一边，并将随市场面板切换位置。",
+                "market_trades": "",
+                "my_trades": "",
+                "open_orders": "",
                 "order_book_grouping": "分组订单将会按照定义的百分比靠齐。",
                 "order_style": "使用垂直订单薄来固定其到边缘面板",
                 "orderbook_auto_scroll": "自动滚动订单薄来保证有新订单时保证在中部。 关闭以允许滚动。",
@@ -657,6 +660,7 @@
                 "reduce_scrollbars": "默认禁止滚动条",
                 "reload": "此设置的更改将在人工重载后才会生效",
                 "reverse_order_book": "反转订单薄使买单在顶部",
+                "settlements": "",
                 "show_market_depth": "显示市场深度",
                 "show_price_chart": "显示价格图表",
                 "single_colum_order_form": "强制 单价，数量，成交总额等在一列（不浮动）"
@@ -669,6 +673,7 @@
         "settle_delay_globally_settled": "此资产可以被即时强制清算",
         "settle_globally_settled": "即时强清",
         "settle_globally_settled_tooltip": "此资产处于全局清算中。你可以以全局清算价格清算此资产（请查看交易标题或资产详情)",
+        "settle_offset": "Settlement price offset: %(offset)s%",
         "settle_orders": "强清单",
         "settlement_hint": "你正在准备强制清算{long}。{market_link}当前价格",
         "short": "借贷",
@@ -751,6 +756,7 @@
             "price_feed": {
                 "external_feed_price": "喂价（见证人喂价的中值价）",
                 "feed_lifetime": "喂价时间（小时）",
+                "feed_price": "Feed price",
                 "global_settlement_price": "全局清算触发价格",
                 "maintenance_collateral_ratio": "维持抵押率(MCR)",
                 "maximum_short_squeeze_price": "强平价格(MSSP)",
@@ -761,6 +767,7 @@
             },
             "price_feed_data": {
                 "core_exchange_rate": "手续费汇率CER ",
+                "feed_price": "Feed price",
                 "maintenance_collateral_ratio": "维持抵押率MCR",
                 "maximum_short_squeeze_ratio": "强平惩罚比率MSSR",
                 "published": "发布时间",
@@ -967,7 +974,9 @@
             "gdex": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 GDEX 提供的网关服务进行充值提现。",
             "open": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 Openledger 提供的网关服务进行充值提现。",
             "rudex": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 Rudex 提供的网关服务进行充值提现。",
-            "trade": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 Blocktrades 提供的网关服务进行充值提现。"
+            "trade": "资产 %(asset)s 由真实资产 %(backed)s 1:1 储备背书。可以通过 Blocktrades 提供的网关服务进行充值提现。",
+            "win": "",
+            "xbts": ""
         },
         "balance": "当前余额",
         "balance_asset": "当前 %(asset)s 余额",
@@ -1376,7 +1385,8 @@
             "amount": "销毁数量",
             "from": "销毁来自账户",
             "submit": "销毁",
-            "title": "销毁（拥有）资产"
+            "title": "销毁（拥有）资产",
+            "warning_message": "Note that asset burn (reserve) will destroy the amount of selected asset. This action can not be reverted once submitted!"
         },
         "save": "保存",
         "send": {
@@ -1628,6 +1638,7 @@
     },
     "settings": {
         "access": "接入点",
+        "access_text": "",
         "accounts": "账户",
         "accounts_text": "我的账户列表。",
         "activate": "使用",
@@ -1802,7 +1813,8 @@
             },
             "steps_costs": {
                 "text": "一些长文本",
-                "title": "强制清算"
+                "title": "强制清算",
+                "title_within": ""
             },
             "steps_introduction": {
                 "text": "使用来自于比特股区块链原生的dApp来管理存放抵押物与创建智能货币SmartCoins。",
@@ -2194,6 +2206,7 @@
             "rangeNamed": "%(name)s必须在%(min)s到%(max)s范围之内",
             "required": "此字段必填",
             "requiredNamed": "%(name)s必填",
+            "test": "",
             "types": {
                 "array": "此字段必须是数组",
                 "arrayNamed": "%(name)s必须是数组",
